--- a/literature.bib
+++ b/literature.bib
@@ -58028,4 +58028,34 @@ African Linguistics",
 }
 
 
+@book{katamba2006morphology,
+	title="Morphology",
+	author="Francis {Katamba}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/3107159177",
+	year="2006"
+}
+
+@article{bloomfield1926a,
+	title="A set of postulates for the science of language",
+	author="Leonard {Bloomfield}",
+	journal="Language",
+	volume="2",
+	number="3",
+	pages="153--164",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2327524449",
+	year="1926"
+}
+
+@article{hay2001lexical,
+	title="Lexical frequency in morphology: Is everything relative?",
+	author="Jennifer {Hay}",
+	journal="Linguistics",
+	volume="39",
+	number="6",
+	pages="1041--1070",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2100881784",
+	year="2001"
+}
+
+
 
