Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -1002,6 +1002,10 @@ Relatedly, \citep{culbertson2020from} link conceptual closeness to MI, and argue
 
 \subsection{Cognitive Motivations}
 
+A prominent cognitively-motivated theory of morpheme ordering is the theory of complexity-based ordering \citep{plag2009suffix}
+
+\cite{plag2009suffix} %http://www.sfs.uni-tuebingen.de/~hbaayen/publications/plagBaayenLanguage2009.pdf
+
 
 Usage statistics
 
@@ -1018,8 +1022,41 @@ Usage statistics
 all show that `less parsable' affixes are closer to root
 
 
+Broadly, this theory holds that affixes are closer to the root when they are less strongly separable from the base.
+
+Baayen's(1993) dual processing race model of morphological access.
+Forms are less separable when they are more likely to be processed together with the root in human morphological processing
+(Baayen \& Schreuder 1999, Baayen \& Moscoso del Prado Mart ́ın 2005).
+
+
+Hay (in press) distinguishes between derived forms which are more frequent than the bases they contain (e.g.illegible is more frequent than legible), and derived forms whic hare less frequent than their bases (e.g.illiberal is less frequent than liberal).
+
+\cite{hay2001lexical} argues that whether an affix is processed together with the root is determined in part by the relative frequency
+\begin{equation}
+    \frac{P(base+affix)}{P(base)}
+\end{equation}
+
+\begin{equation}
+    \log \frac{P(base, affix)}{P(base)} = \log P(affix|base)
+\end{equation}
+
+\begin{equation}
+    pmi(base, affix) = \log \frac{p(affix|base)}{p(base)}
+\end{equation}
+
+Hay and Baayen (2002).
+
+Hay and Plag (2004): parsing ratio and productivity measured by Hay and Baayen (2002).
+
+
+
+Alternatively, the lower thefrequency of the derived word in relation to the base word, the more important the role ofthe constituents become
+
+Hay and Plag (2004) show that ordering correlates with relative frequency and productivity
 
 Inkelas: informativity: they propose that bigram surprisal is minimized (not their terminology), test this in a pilot study of Turkish, with partially confirming results \citep{inkelas2015informativity}
+
+%Complexity-based Ordering, the position of a given suffix inthe hierarchy reflects the degree to which that suffix is processed independently of its base.
 
 
 \subsection{Arbitrary Orderings}
@@ -1063,8 +1100,6 @@ also provide a ctagoeirzation into grammatical, psycholinguistic, unmotivated (a
 
 
 
-
-\cite{plag2009suffix} %http://www.sfs.uni-tuebingen.de/~hbaayen/publications/plagBaayenLanguage2009.pdf
 
 
 
