--- a/literature.bib
+++ b/literature.bib
@@ -58058,4 +58058,132 @@ African Linguistics",
 }
 
 
+@article{hay2002speech,
+ ISSN = {00978507, 15350665},
+ URL = {http://www.jstor.org/stable/3086898},
+ abstract = {This article presents corpus and experimental evidence in support of a parsability-based account of affix ordering in English: an affix that tends to be easily parsed out during speech perception should not occur inside an affix that does not. This generalization holds both at the affix level and the word level. At the affix level, this maxim, when combined with an understanding of the role of frequency and phonotactics in morphological processing, can account for the patterns generally attributed to level ordering. At the word level, it can explain the so-called dual-level behavior of some affixes-an affix may resist attaching to a complex word that is highly decomposable but be acceptable when it attaches to a comparable complex word that favors the direct access route in speech perception. Only a parsing account can afford this set of phenomena a unified explanation.},
+ author = {Jennifer Hay},
+ journal = {Language},
+ number = {3},
+ pages = {527--555},
+ publisher = {Linguistic Society of America},
+ title = {From Speech Perception to Morphology: Affix Ordering Revisited},
+ volume = {78},
+ year = {2002}
+}
+
+@article{fabb1988english,
+	title="English suffixation is constrained only by selectional restrictions",
+	author="Nigel {Fabb}",
+	journal="Natural Language and Linguistic Theory",
+	volume="6",
+	number="4",
+	pages="527--539",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2056654723",
+	year="1988"
+}
+
+@book{siegel1979topics,
+	title="Topics in English morphology",
+	author="Dorothy Carla {Siegel}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1597233709",
+	year="1979"
+}
+
+
+@article{lee2011ordering,
+	title="Ordering Paradoxes in English Suffixation: An Account Based on Relative Frequency",
+	author="Ju-Eun Lee and Sung-Hoon Hong",
+	journal="Linguistic Research",
+	volume="28",
+	number="1",
+	pages="95--115",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2323208994",
+	year="2011"
+}
+
+@article{manova2010modeling,
+	title="Modeling affix order",
+	author="Stela {Manova} and Mark {Aronoff}",
+	journal="Morphology",
+	volume="20",
+	number="1",
+	pages="109--131",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2046381298",
+	year="2010"
+}
+@book{spencer1991morphological,
+	title="Morphological Theory: An Introduction to Word Structure in Generative Grammar",
+	author="Andrew {Spencer}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1540341990",
+	year="1991"
+}
+
+@article{caballero2010scope,
+	title="Scope, phonology and morphology in an agglutinating language: Choguita Rarámuri (Tarahumara) variable suffix ordering",
+	author="Gabriela {Caballero}",
+	journal="Morphology",
+	volume="20",
+	number="1",
+	pages="165--204",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2138159596",
+	year="2010"
+}
+
+@article{narrog2010the,
+	title="The order of meaningful elements in the Japanese verbal complex",
+	author="Heiko {Narrog}",
+	journal="Morphology",
+	volume="20",
+	number="1",
+	pages="205--237",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2043945956",
+	year="2010"
+}
+
+@article{inkelas1993nimboran,
+	title="Nimboran position class morphology",
+	author="Sharon {Inkelas}",
+	journal="Natural Language and Linguistic Theory",
+	volume="11",
+	number="4",
+	pages="559--624",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1993981320",
+	year="1993"
+}
+
+@article{simpson1986pronominal,
+	title="Pronominal Clitic Clusters and Templates",
+	author="J. {Simpson} and M. {Withgott}",
+	journal="",
+	pages="147--174",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2998849362",
+	year="1986"
+}
+
+@article{stump1992on,
+	title="On the theoretical status of position class restrictions on inflectional affixes",
+	author="Gregory T. {Stump}",
+	journal="",
+	pages="211--241",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1499477889",
+	year="1992"
+}
+
+@article{spencer2006linguistic,
+	title="Linguistic Universals: Morphological universals",
+	author="Andrew {Spencer}",
+	journal="",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2276003288",
+	year="2006"
+}
+
+@book{mithun2000languages,
+	title="The Languages of Native North America",
+	author="Marianne Mithun",
+	address="Cambridge",
+	publisher="Cambridge University Press",
+	year="1999"
+}
+
 
